fixed some alignment issues

--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -288,6 +288,7 @@ a:focus {
 
 .content-section h1,h2,h3,h4,h5,h6,p {
     text-align: center;
+    margin-bottom: 25px;
 }
 
 .content-section ul {
@@ -312,11 +313,18 @@ a:focus {
 #events img {
     max-width: 100%;
     height: auto;
+    margin-bottom: 10px;
 }
 
 #accommodations img {
     max-width: 100%;
     height: auto;
+}
+
+@media (max-width:992px) {
+    #accommodations img {
+        margin-bottom: 10px;   
+    }
 }
 
 #accommodations .hotel-link {
@@ -405,4 +413,16 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+    ul.nav.navbar-nav {
+        font-size: 12px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+    ul.nav.navbar-nav {
+        font-size: 12px;
+    }
 }
